samples/_failures_safe/1761481812_4b3e50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e5c6480.c: In function ‘main’:
./samples/SAFE/__tmp_3e5c6480.c:165:25: error: ‘MAX_TOK’ undeclared (first use in this function); did you mean ‘MAX_TOKENS’?
  165 |     struct Token tokens[MAX_TOK
      |                         ^~~~~~~
      |                         MAX_TOKENS
./samples/SAFE/__tmp_3e5c6480.c:165:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_3e5c6480.c:165:32: error: expected ‘]’ at end of input
  165 |     struct Token tokens[MAX_TOK
      |                                ^
      |                                ]
./samples/SAFE/__tmp_3e5c6480.c:165:12: error: expected declaration or statement at end of input
  165 |     struct Token tokens[MAX_TOK
      |            ^~~~~
